# AquaCLR

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  DISSERTATION.md  LICENSE  MODEL_CARD.md  README.md  download_data_wandb.py  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
configs/: default.yaml
configs/data/: combined.yaml  combined_a3000.yaml  combined_all.yaml  lsui.yaml  msrb.yaml
configs/model/: legion_desnow_s.yaml
configs/train/: rtx3050_bf16.yaml  rtx_a3000_bf16.yaml
docs/: ARCHITECTURE.md  DEPLOYMENT_FEDORA.md  README.md
docs/dissertation/: 01_introduction.md  02_background.md  03_theory.md  04_architecture.md  05_implementation.md  06_datasets.md  07_training.md  08_evaluation.md  09_deployment.md  10_results.md  11_conclusion.md  12_references.md  A_math.md  B_glossary.md  C_code_reference.md  D_reproducibility.md  README.md
docs/legion/: README.md  ai_slam_pipeline.md  architecture.md  comms_protocol.md  formation_control.md  ros2_nodes_detailed.md  simulation_testing.md  todo_research.md
docs/shifting/: 01_introduction_and_comparison.md  02_physics_utilities.md  03_network_architecture.md  04_physics_loss.md  05_training_integration.md  06_synthetic_data.md  07_migration_checklist.md  architecture.md  complete-architecture.md
notebooks/: 01_explore_msrb.ipynb
scripts/: build_dissertation.sh  download_data.py  evaluate.py  evaluate_slam_features.py  export_onnx.py  infer_camera.py  train.py
src/aquaclr/: __init__.py
src/aquaclr/data/: __init__.py  combined_datamodule.py  download.py  lsui_dataset.py  msrb_dataset.py  snow_synthesis.py  transforms.py  uieb_dataset.py
src/aquaclr/inference/: __init__.py  benchmark.py  inference_trt.py  onnx_export.py
src/aquaclr/losses/: __init__.py  physics_loss.py  ssim.py  tv.py
src/aquaclr/models/: __init__.py  model.py
src/aquaclr/models/backbones/: __init__.py  mobilenet_v3.py
src/aquaclr/models/decoders/: __init__.py  unet_dsc.py
src/aquaclr/models/heads/: __init__.py  backscatter.py  transmission.py
src/aquaclr/ros2/: __init__.py  ros2_node.py
src/aquaclr/training/: __init__.py  callbacks.py  lit_module.py
src/aquaclr/utils/: __init__.py  physics.py  seed.py
tests/: conftest.py  test_data.py  test_export.py  test_model.py  test_physics_loss.py  test_ssim_tv.py
