[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "aquaclr"
version = "0.1.0"
description = "Project LEGION M1: Physics-Informed CNN for marine-snow removal in subsea video (RTX 3050 / TensorRT FP16)."
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = { text = "Apache-2.0" }
authors = [
    { name = "Project LEGION", email = "legion@example.org" },
]
keywords = [
    "underwater-imaging",
    "marine-snow",
    "physics-informed-cnn",
    "image-restoration",
    "tensorrt",
    "ros2",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Processing",
]

# Core runtime deps. Pinned to versions verified compatible with PyTorch 2.5 / CUDA 12.4.
dependencies = [
    "torch>=2.5.0,<2.7",
    "torchvision>=0.20.0,<0.22",
    "lightning>=2.4.0,<2.6",
    "torchmetrics>=1.4.0",
    "numpy>=1.26,<2.2",
    "pillow>=10.3",
    "opencv-python-headless>=4.10",
    "albumentations>=1.4.10",
    "hydra-core>=1.3.2",
    "omegaconf>=2.3",
    "rich>=13.7",
    "tqdm>=4.66",
    "pydantic>=2.7",
    "wandb>=0.17",
    "tensorboard>=2.17",
    "einops>=0.8",
    "onnx>=1.21.0",
    "pyiqa>=0.1.15.post2",
    "tensorrt>=10.16.1.11",
    "pycuda>=2026.1",
]

[project.optional-dependencies]
trt = [
    # NVIDIA TensorRT and ONNX. Install separately if wheels are unavailable on PyPI for the
    # target platform — see README for the conda/pip-extra-index-url instructions.
    "onnx>=1.16",
    "onnxruntime-gpu>=1.18; sys_platform != 'darwin'",
    "onnxruntime>=1.18; sys_platform == 'darwin'",
    "onnxsim>=0.4.36",
    "tensorrt>=10.0; sys_platform == 'linux'",
    "pycuda>=2024.1; sys_platform == 'linux'",
]
ros2 = [
    # rclpy / cv_bridge are installed via the ROS2 Humble apt distribution, NOT via pip.
    # This extra only carries the python-side helpers we use in ros2_node.py.
    "numpy>=1.26",
]
dev = [
    "ruff>=0.6",
    "mypy>=1.11",
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "pre-commit>=3.8",
    "ipykernel>=6.29",
    "matplotlib>=3.9",
    "types-Pillow",
    "types-tqdm",
]

[project.scripts]
aquaclr-train = "aquaclr.scripts_entry:train_main"
aquaclr-export = "aquaclr.scripts_entry:export_main"
aquaclr-benchmark = "aquaclr.scripts_entry:benchmark_main"

[project.urls]
Homepage = "https://github.com/goldr0g3r/aquaclr"
Repository = "https://github.com/goldr0g3r/aquaclr"
Issues = "https://github.com/goldr0g3r/aquaclr/issues"
Changelog = "https://github.com/goldr0g3r/aquaclr/releases"

# ----------------------------- Tooling -----------------------------

[tool.hatch.build.targets.wheel]
packages = ["src/aquaclr"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "scripts", "tests"]
extend-exclude = ["notebooks", "data", "outputs", "logs"]

[tool.ruff.lint]
select = [
    "E", "F", "W",       # pycodestyle / pyflakes
    "I",                  # isort
    "B",                  # flake8-bugbear
    "UP",                 # pyupgrade
    "N",                  # pep8-naming
    "SIM",                # flake8-simplify
    "PL",                 # pylint
    "RUF",                # ruff-specific
    "ANN",                # flake8-annotations
    "D",                  # pydocstyle
]
ignore = [
    "D203",   # one-blank-line-before-class (conflicts with D211)
    "D213",   # multi-line-summary-second-line (conflicts with D212)
    "PLR0913", # too-many-arguments (model configs legitimately have many)
    "ANN401", # allow Any in *args/**kwargs typing where pragmatic
    "PLR2004", # magic numbers (we have many physical constants)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D", "ANN", "PLR2004"]
"scripts/**" = ["D"]
"src/aquaclr/ros2/**" = ["D"]  # ROS2 node will be run in a separate ROS env

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_any_generics = true
disallow_untyped_decorators = true
no_implicit_reexport = true
explicit_package_bases = true
mypy_path = ["src"]
files = ["src/aquaclr"]

[[tool.mypy.overrides]]
module = [
    "cv2.*",
    "albumentations.*",
    "wandb.*",
    "tensorrt.*",
    "pycuda.*",
    "rclpy.*",
    "cv_bridge.*",
    "sensor_msgs.*",
    "rosidl_runtime_py.*",
    "onnxsim.*",
    "torch2trt.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --strict-markers --strict-config"
testpaths = ["tests"]
markers = [
    "gpu: tests that require CUDA (auto-skipped if unavailable)",
    "trt: tests that require TensorRT (auto-skipped if unavailable)",
    "slow: tests >5s",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:pkg_resources",
    "ignore::UserWarning:torch.onnx",
]

[tool.coverage.run]
source = ["src/aquaclr"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

# ----------------------------- uv: PyTorch CUDA index -----------------------------
# PyPI's default `torch` wheel is the CPU build. On Linux + Windows we want the
# CUDA 12.4 wheels (`+cu124`) so training actually uses the GPU. macOS keeps the
# PyPI default since Apple Silicon has no CUDA.
#
# `explicit = true` means: only consult this index for packages explicitly mapped
# to it (torch, torchvision). It does NOT shadow PyPI for everything else.

[tool.uv.sources]
torch = [
    { index = "pytorch-cu124", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
    { index = "pytorch-cu124", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
